[gd_scene load_steps=22 format=3 uid="uid://qea3w21va8h2"]

[ext_resource type="Script" uid="uid://cmhgoi75bx4e5" path="res://Modules/UI/Scripts/RestartUIManager.gd" id="1_do2ma"]
[ext_resource type="FontFile" uid="uid://v5ppclwsn5md" path="res://Modules/UI/Assets/BlackHanSans-Regular.ttf" id="2_5yilc"]
[ext_resource type="Texture2D" uid="uid://bvh81sojslqr1" path="res://Modules/UI/Assets/RestartUI/MaxAltitude.png" id="3_kf7b8"]
[ext_resource type="Texture2D" uid="uid://t8g0481canl7" path="res://Modules/UI/Assets/RestartUI/MaxSpeed.png" id="4_jwxwk"]
[ext_resource type="Texture2D" uid="uid://bme4yvkaxxm0e" path="res://Modules/UI/Assets/RestartUI/Line.png" id="5_auod6"]
[ext_resource type="Texture2D" uid="uid://b7cfgbl8dyb2u" path="res://Modules/UI/Assets/RestartUI/Coin.png" id="6_mqcux"]
[ext_resource type="Texture2D" uid="uid://pywssx2rkqey" path="res://Modules/UI/Assets/RestartUI/RestartButton.png" id="7_gsy7w"]
[ext_resource type="Texture2D" uid="uid://ccjwq3bx3658t" path="res://Modules/UI/Assets/RestartUI/RestartADButton.png" id="8_t8svf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jwxwk"]
bg_color = Color(0.321569, 0.337255, 0.368627, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.341176, 0.388235, 0.439216, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="LabelSettings" id="LabelSettings_kf7b8"]
font = ExtResource("2_5yilc")
font_size = 36
outline_size = 10
outline_color = Color(0.407843, 0.490196, 0.552941, 1)
shadow_size = 16
shadow_color = Color(0.290196, 0.321569, 0.364706, 1)
shadow_offset = Vector2(0, 2.97)

[sub_resource type="LabelSettings" id="LabelSettings_auod6"]
font = ExtResource("2_5yilc")
font_color = Color(0.843137, 0.858824, 0.890196, 1)
shadow_offset = Vector2(0, 2.97)

[sub_resource type="LabelSettings" id="LabelSettings_mqcux"]
font = ExtResource("2_5yilc")
font_size = 40
outline_size = 15
outline_color = Color(0.45098, 0.345098, 0.345098, 1)
shadow_color = Color(0.369462, 0.303421, 0.303471, 1)
shadow_offset = Vector2(0, 2)

[sub_resource type="LabelSettings" id="LabelSettings_gsy7w"]
font = ExtResource("2_5yilc")
font_size = 35
outline_size = 10
outline_color = Color(0.45098, 0.345098, 0.345098, 1)
shadow_color = Color(0.317647, 0.290196, 0.290196, 1)
shadow_offset = Vector2(0, 2)

[sub_resource type="LabelSettings" id="LabelSettings_t8svf"]
font = ExtResource("2_5yilc")
font_size = 35
outline_size = 10
outline_color = Color(0.521569, 0.470588, 0.329412, 1)
shadow_color = Color(0.360784, 0.34902, 0.313726, 1)
shadow_offset = Vector2(0, 2)

[sub_resource type="LabelSettings" id="LabelSettings_jwxwk"]
font = ExtResource("2_5yilc")
font_size = 40
outline_size = 15
outline_color = Color(0.52549, 0.47451, 0.333333, 1)
shadow_color = Color(0.52549, 0.47451, 0.333333, 1)
shadow_offset = Vector2(0, 2)

[sub_resource type="LabelSettings" id="LabelSettings_r3wld"]
font = ExtResource("2_5yilc")
font_size = 120
outline_size = 15
outline_color = Color(0.282353, 0.368627, 0.545098, 1)
shadow_size = 20
shadow_color = Color(0.243137, 0.266667, 0.313726, 1)
shadow_offset = Vector2(0, 2)

[sub_resource type="LabelSettings" id="LabelSettings_go303"]
font = ExtResource("2_5yilc")
font_size = 40
outline_size = 15
outline_color = Color(0.372549, 0.447059, 0.596078, 1)
shadow_color = Color(0.282353, 0.368627, 0.541176, 1)
shadow_offset = Vector2(0, 2)

[sub_resource type="Animation" id="Animation_r3wld"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(144, 1323)]
}

[sub_resource type="Animation" id="Animation_go303"]
resource_name = "close"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.133972, 0.133972),
"update": 0,
"values": [Vector2(144, 438), Vector2(144, 1319)]
}

[sub_resource type="Animation" id="Animation_t8svf"]
resource_name = "open"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.133972, 0.133972),
"update": 0,
"values": [Vector2(144, 1319), Vector2(144, 438)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_go303"]
_data = {
&"RESET": SubResource("Animation_r3wld"),
&"close": SubResource("Animation_go303"),
&"open": SubResource("Animation_t8svf")
}

[node name="RestartUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_do2ma")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = 747.0
offset_right = 172.0
offset_bottom = 1041.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5097, 1.5097)
pivot_offset = Vector2(179.443, 154.287)
theme_override_styles/panel = SubResource("StyleBoxFlat_jwxwk")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -86.0
offset_top = -42.0
offset_right = 87.0
offset_bottom = -2.0
grow_horizontal = 2
text = "Restart?"
label_settings = SubResource("LabelSettings_kf7b8")
horizontal_alignment = 1

[node name="Label5" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -28.0
offset_top = 19.0
offset_right = 33.0
offset_bottom = 36.0
grow_horizontal = 2
text = "STATS"
label_settings = SubResource("LabelSettings_auod6")
horizontal_alignment = 1

[node name="maxAlttextureRect" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = 23.0
offset_top = 41.0
offset_right = 250.0
offset_bottom = 76.0
scale = Vector2(1.35704, 1.35704)
texture = ExtResource("3_kf7b8")
expand_mode = 1

[node name="Label2" type="Label" parent="Panel/maxAlttextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -99.4989
offset_top = 9.57969
offset_right = 194.501
offset_bottom = 50.5797
grow_horizontal = 2
scale = Vector2(0.359023, 0.359023)
text = "Max Altitude:"
label_settings = SubResource("LabelSettings_mqcux")

[node name="MaxAltitude" type="Label" parent="Panel/maxAlttextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 27.9846
offset_top = 5.89519
offset_right = 117.985
offset_bottom = 41.8952
grow_horizontal = 2
scale = Vector2(0.643379, 0.643379)
text = "0m"
label_settings = SubResource("LabelSettings_gsy7w")
horizontal_alignment = 1

[node name="MaxSpeedRect" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = 23.0
offset_top = 97.0
offset_right = 250.0
offset_bottom = 132.0
scale = Vector2(1.35704, 1.35704)
texture = ExtResource("4_jwxwk")
expand_mode = 1

[node name="MaxSpeed" type="Label" parent="Panel/MaxSpeedRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 27.9846
offset_top = 7.0
offset_right = 124.985
offset_bottom = 43.0
grow_horizontal = 2
scale = Vector2(0.588957, 0.588957)
text = "0m/s"
label_settings = SubResource("LabelSettings_t8svf")

[node name="Label3" type="Label" parent="Panel/MaxSpeedRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -99.4989
offset_top = 9.57967
offset_right = 194.501
offset_bottom = 50.5797
grow_horizontal = 2
scale = Vector2(0.359023, 0.359023)
text = "Max Speed:"
label_settings = SubResource("LabelSettings_jwxwk")

[node name="Line" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = 35.0
offset_top = 151.0
offset_right = 319.0
offset_bottom = 155.0
texture = ExtResource("5_auod6")
expand_mode = 1

[node name="CoinsRect" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = 102.0
offset_top = 163.0
offset_right = 244.0
offset_bottom = 203.0
texture = ExtResource("6_mqcux")
expand_mode = 1

[node name="Coins" type="Label" parent="Panel/CoinsRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 4.0
offset_top = 7.0
offset_right = 311.0
offset_bottom = 128.0
grow_horizontal = 2
scale = Vector2(0.198972, 0.198972)
text = "0"
label_settings = SubResource("LabelSettings_r3wld")
horizontal_alignment = 1

[node name="Label4" type="Label" parent="Panel/CoinsRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -59.0
offset_top = 11.0
offset_right = 89.0
offset_bottom = 52.0
grow_horizontal = 2
scale = Vector2(0.413995, 0.413995)
text = "Coins:"
label_settings = SubResource("LabelSettings_go303")

[node name="Restartbutton" type="TextureButton" parent="Panel"]
layout_mode = 0
offset_top = 203.0
offset_right = 187.0
offset_bottom = 277.0
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(95.7143, 35.7142)
texture_normal = ExtResource("7_gsy7w")

[node name="RestartWithAdsButton" type="TextureButton" parent="Panel"]
layout_mode = 0
offset_left = 181.0
offset_top = 171.0
offset_right = 406.0
offset_bottom = 293.0
scale = Vector2(0.8, 0.8)
texture_normal = ExtResource("8_t8svf")

[node name="ResetAnim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_go303")
}

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="mouse_entered" from="Panel/Restartbutton" to="." method="_on_restartbutton_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Restartbutton" to="." method="_on_restartbutton_mouse_exited"]
[connection signal="pressed" from="Panel/Restartbutton" to="." method="_on_restart_button_pressed"]
[connection signal="mouse_entered" from="Panel/RestartWithAdsButton" to="." method="_on_restart_with_ads_button_mouse_entered"]
[connection signal="mouse_exited" from="Panel/RestartWithAdsButton" to="." method="_on_restart_with_ads_button_mouse_exited"]
[connection signal="pressed" from="Panel/RestartWithAdsButton" to="." method="_on_restart_with_ads_button_pressed"]
